# VChat

./: LICENSE.md  README.md
Labs/: CMakeLists.txt  go.mod
Labs/Lab1/: server.go
NetCode/: CMakeLists.txt
NetCode/ch12/: echo_selectserv.cpp  select.cpp
NetCode/ch14/: news.receiver.cpp  news_sender.cpp
NetCode/ch15/: syscpy.cpp
NetCode/ch16/: sep_clnt.cpp  sep_serv.cpp
NetCode/ch24/: web_serv_linux.cpp
NetCode/ch7/: file_client.c  file_server.c
NetCode/class-3/: echo_client.cpp  echo_server.cpp
NetCode/class-4/: udp_client.cpp  udp_server.cpp  upd_client.cpp
NetCode/class1-2/: Client.cpp  Server.cpp
NetCode/test/: test.cpp
NetCodeWindows/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
VChat/client/: .clang-format  CMakeLists.txt
VChat/client/src/: icons.qrc  loginwindow.cpp  loginwindow.h  mainwindow.h  registerwindow.h  registerwindow.ui
VChat/server/: .gitignore  CMakeLists.txt
VChat/server/misc/: client.py
VChat/server/server/: apis.hpp  codec.cpp  codec.hpp  core.cpp  core.hpp  db.cpp  db.hpp  file.cpp  file.hpp  logger.cpp  logger.hpp  main.cpp  poller.cpp  poller.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  tcp.cpp  tcp.hpp  thread.cpp  thread.hpp  udp.cpp  udp.hpp  utils.cpp  utils.hpp
VChat/server/store/: database.sqlite3
VChat/server/tests/: client.py  server.py  test_tcp.cpp
final-project/client/: .gitignore  CMakeLists.txt  loginwindow.cpp
final-project/client/src/: loginwindow.ui  registerwindow.cpp  socket.cpp  socket.h
final-project/server/: .gitignore  CMakeLists.txt
final-project/server/include/: apis.hpp  core.hpp  db.hpp  logger.hpp  socket.hpp
final-project/server/server/: apis.cpp  core.hpp  file.cpp  file.hpp  logger.cpp  logger.hpp  main.cpp  socket.hpp  thread.cpp  thread.hpp  utils.cpp  utils.hpp
final-project/server/src/: apis.cpp  db.cpp  logger.cpp  main.cpp  socket.cpp
